Header Alignment Fixes - increased spacing

--- a/docroot/profiles/labp/themes/la/labusinessportaltheme/css/styles.css
+++ b/docroot/profiles/labp/themes/la/labusinessportaltheme/css/styles.css
@@ -2863,7 +2863,7 @@ body.not-logged-in.page-user #main {
   /* line 7, ../sass/components/_menu__main.scss */
   #header .menu {
     float: left;
-    margin-left: 40px;
+    margin-left: 62px;
     padding: 0;
     height: 55px;
     position: relative;
